<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.UpdateFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_id"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_player"
        android:inputType="textPersonName"
        android:hint="@string/hint_input_player_name"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/textView4"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/editText_player"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2_score"
        android:inputType="number"
        android:hint="@string/hint_input_player_score"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignEnd="@+id/editText_player"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:id="@+id/textView5"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3_level"
        android:hint="@string/hint_input_player_level"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/editText2_score"
        android:layout_alignEnd="@+id/editText2_score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_info"
        android:id="@+id/textView9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/button_cancel"
            android:background="@drawable/button_bg"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/button_save"
            android:layout_weight="1"
            android:background="@drawable/button_bg"/>
    </LinearLayout>
</RelativeLayout>
