<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fragments.BlankFragment">
//    tools:context="com.ben.sqlitegamedemo.BlankFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_player"
        android:hint="@string/hint_input_player_name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2_score"
        android:hint="@string/hint_input_player_score"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/editText_player"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3_level"
        android:hint="@string/hint_input_player_level"
        android:ems="10"
        android:layout_below="@+id/editText2_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
